// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":16}}"
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Render shapesquare 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":\\"0\\"}}"
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Render sizedefault 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":16}}"
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Render sizelarge 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":20}}"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
/>
`;

exports[`Render sizesmall 1`] = `
<div
  className="skeleton {\\"style\\":{\\"borderRadius\\":12}}"
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
/>
`;
